making config data more similar to DemoSitePrivate