@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="site" default="build-app" basedir="."
+<project name="site"  basedir="."
     xmlns:artifact="antlib:org.apache.maven.artifact.ant"
     xmlns:rsel="antlib:org.apache.tools.ant.types.resources.selectors">
     
@@ -21,23 +21,10 @@
 	
 	<property name="runtime.environment" value="development"/>
 	
-    <target name="jetty-demo-no-db">
-            <delete dir="war/WEB-INF/lib"/>
-            <artifact:mvn mavenHome="${maven.home}" fork="true">
-                <jvmarg value="-XX:MaxPermSize=256M" />
-                <jvmarg value="-Xmx512M" />
-                <jvmarg value="-Xdebug" />
-                <jvmarg value="-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n" />
-            	<jvmarg value="-javaagent:${spring.instrument.path}" />
-            	<jvmarg value="-Druntime.environment=${runtime.environment}" />
-                <arg value="compile"/>
-                <arg value="war:exploded"/>
-                <arg value="jetty:run"/>
-            </artifact:mvn>
-        </target>
 
-    <target name="jetty-demo" depends="start-db">
-        <delete dir="war/WEB-INF/lib"/>
+
+    <target name="tomcat">
+        <delete dir="war/sWEB-INF/lib"/>
         <artifact:mvn mavenHome="${maven.home}" fork="true">
             <jvmarg value="-XX:MaxPermSize=256M" />
             <jvmarg value="-Xmx512M" />
@@ -51,7 +38,7 @@
         </artifact:mvn>
     </target>
 
-    <target name="jetty-demo-jrebel" depends="start-db">
+    <target name="tomcat-jrebel">
         <delete dir="war/WEB-INF/lib"/>
         <artifact:mvn mavenHome="${maven.home}" fork="true">
             <jvmarg value="-XX:MaxPermSize=256M" />
@@ -70,61 +57,5 @@
         </artifact:mvn>
     </target>
     
-    <target name="jetty-stop">
-        <artifact:mvn mavenHome="${maven.home}" fork="true">
-            <jvmarg value="-XX:MaxPermSize=256M" />
-            <jvmarg value="-Xmx512M" />
-            <arg value="jetty:stop"/>
-        </artifact:mvn>
-    </target>
-	
-	<target name="stop-all" depends="jetty-stop, stop-db"/>
-    
-    <!-- Project Reference Targets -->
-    <!-- build the application and create the war artifact -->
-    <target name="build-app">
-        <delete dir="war/WEB-INF/lib"/>
-        <artifact:mvn mavenHome="${maven.home}" fork="true">
-            <arg value="-Dmaven.test.skip=true"/>
-            <arg value="install"/>
-        </artifact:mvn>
-    </target>
-
-    <target name="start-db">
-        <!-- Grab the HSQLDB jar and add it to the classpath -->
-        <artifact:dependencies filesetId="warDeps">
-            <dependency groupId="org.hsqldb" artifactId="hsqldb" version="2.3.1" />
-        </artifact:dependencies>
-        <path id="build.runtime.classpath">
-            <fileset refid="warDeps"/>
-        </path>
-
-        <echo message="Starting Data Base..." />
-        <java fork="true"  spawn="true" classname="org.hsqldb.Server" classpathref="build.runtime.classpath">
-            <arg  line="-database.0 file:data/broadleaf -dbname.0 broadleaf"/>
-        </java>
-    </target>
-
-    <target name="stop-db">
-        <echo message="Execute SQL on new Data Base..." />
-    	<!-- Grab the HSQLDB jar and add it to the classpath -->
-        <artifact:dependencies filesetId="warDeps">
-            <dependency groupId="org.hsqldb" artifactId="hsqldb" version="2.3.1" />
-        </artifact:dependencies>
-        <path id="build.runtime.classpath">
-            <fileset refid="warDeps"/>
-        </path>
-        <sql
-            autocommit="true"
-            print="true"
-            classpathref="build.runtime.classpath"
-            driver="org.hsqldb.jdbcDriver"
-            url="jdbc:hsqldb:hsql://localhost/broadleaf;ifexists=true"
-            userid="sa"
-            password="">
-            <transaction>SHUTDOWN</transaction>
-        </sql>
-        <echo message="SQL Executed on data base..." />
-    </target>
 
 </project>
